kubernetes/infrastructure/bases/openshift-console/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-ingress
spec:
  rules:
  - host: __PATCH__
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: openshift-console
            port: 
              number: 9000
  tls:
  - hosts: []
    secretName: console-ingress-tls
